# smt

./: .gitignore  HACKING  Makefile  README  README.md  RELEASENOTES--Update-issues  SETUP.md  TODO  buildrequires.sh  runtimerequires.sh  smt.spec  sysconfig.apache2-yep  sysconfig.smt-client  yep.spec
add-on/: Makefile  README  content  installation.xml
apache2/: smt-mod_perl-startup.pl  yep-mod_perl-startup.pl
client/: Makefile  README
config/: installation.xml  log4perl.conf  log4perlApache.conf  rc.smt  smt-maintenance  smt-schema-migration.service  smt-schema-upgrade.service  smt-tmpfiles.conf  smt.conf  smt.conf.production  smt.reg  smt.service  smt.target  yep.conf  yep.conf.production
cron/: novell.com-smt  smt-cron.conf  smt-daily  smt-gen-report  smt-jobqueue-cleanup  smt-logrun  smt-register  smt-repeated-register  smt-run-jobqueue-cleanup
db/: README  README-DB-IMPORT  README.mysql  product_dependencies.sql  products.sql  setup_db.pl  setup_mysql.sh  setupdb.init  smt-db  smt-schema-upgrade  smt-setup-db  smt-sql  smt-tables_mysql.sql  smt-tables_sqlite.sql  targets.sql  tmp-catalogs.sql  tmp-productcatalogs.sql  tmp-register.sql  tmp-subscriptions.sql  yep-tables.sql  yep-tables_mysql.sql  yep-tables_sqlite.sql
devel-scripts/: SCCSubComp.pl  client-compare.pl  findProductsWithoutCatalogs.sh  jobapitest.pl  quickRESTUpdate.pl  relation-dump.txt  relations-compare.pl  relations-test.pl  reset.sh  smt-patchcd  testClientAuthentication.pl  testClientQueries.pl  (+1 more)
yast/src/: Makefile.am  SMTData.ycp  YEPData.ycp  complex.ycp  dialogs.ycp  helps.ycp  inst_smt.ycp  inst_yep.ycp  regsrv-check-creds  smt-server.desktop  smt-server.ycp  smt.desktop  smt.ycp  smt_control.xml  smt_generate_new_credentials.ycp  wizard.ycp  yep.desktop  yep.ycp
yast/src/clients/: inst_smt.rb  smt-server.rb  smt-wizard.rb  smt.rb  smt_generate_new_credentials.rb
yast/src/desktop/: smt-server.desktop  smt-wizard.desktop
yast/src/icons/22x22/: Makefile.am
yast/src/icons/32x32/: Makefile.am
yast/src/icons/48x48/: Makefile.am
yast/src/include/smt/: complex.rb  dialogs.rb  helps.rb  wizard.rb
yast/src/modules/: SMTData.rb
yast/src/scripts/: regsrv-check-creds
(+524 files in other folders)
